package resources.generated.nested;

option java_package = "resources.generated.nested";
option scala_package = "resources.generated.nested_scala";

message PackageScalaTest {
  required int32 required_field = 1;
}
