package tests.generated;

option scala_outer_classname = "ScalaBuffMessageTest";

option optimize_for = LITE_RUNTIME;

message EmptyMessage {
}
